style(Blog): fix alignment with blog title

--- a/src/styles/partials/_banner.scss
+++ b/src/styles/partials/_banner.scss
@@ -133,13 +133,10 @@
   height: 100%;
   margin-top: 0;
 
+  @include grid(wrap, column, center);
+  @include align-items(center);
+
   @include respond-to(s) {
-    @include grid(wrap, column, center);
-
-    .site-banner__title {
-      text-align: center;
-    }
-
     .breadcrumbs {
       @include justify-content(center);
     }
